@@ -1773,6 +1773,16 @@ public class OOXMLParserTest extends TikaTest {
         assertNotContained("\u3068", xml);
     }
 
+    @Test
+    public void testEmbeddedMedia() throws Exception {
+        List<Metadata> metadataList = getRecursiveMetadata("testPPT_embeddedMP3.pptx");
+        assertEquals(4, metadataList.size());
+        assertEquals("application/vnd.openxmlformats-officedocument.presentationml.presentation",
+                metadataList.get(0).get(Metadata.CONTENT_TYPE));
+        assertEquals("audio/mpeg", metadataList.get(1).get(Metadata.CONTENT_TYPE));
+        assertEquals("image/png", metadataList.get(2).get(Metadata.CONTENT_TYPE));
+        assertEquals("image/jpeg", metadataList.get(3).get(Metadata.CONTENT_TYPE));
+    }
 }
 
 
